clusters/apps/workloads/tempo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
  labels:
    app.kubernetes.io/name: tempo
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
